--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "core-js": "^3.8.3",
     "particles.js": "^2.0.0",
     "vue": "^3.2.13",
